syntax = "proto3";

package payment;

service PaymentService{
  rpc CreateCharge (CreateChargeMessage) returns (CreateChargeResponse) {}
}
message CardMessage {
  string id = 1;
}

message CreateChargeMessage{
  string email = 1;
  int32 amount =2;
  // CardMessage card = 3;
  string id = 3;
}

message CreateChargeResponse{
  string id = 1;
 
}


